alterações no css e na index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -25,7 +25,7 @@
             <header class="resume-header pt-4 pt-md-0">
                 <div class="row">
                     <div class="col-block col-md-auto resume-picture-holder text-center text-md-start">
-                        <img class="picture" src="./img/fotoPerfil.JPG" alt="Imagem profissional de João Victor
+                        <img class="picture" src="./assets/img/fotoPerfil.JPG" alt="Imagem profissional de João Victor
                         Lima Dos Santos Manço">
                     </div>
                     <div class="col">
@@ -82,7 +82,7 @@
                             Este Mapa de Carreira apresenta minha trajetória e os próximos passos para uma atuação profissional que une técnica e liderança. Meu objetivo imediato é ingressar no mercado de trabalho, aplicando minha formação Full Stack e adquirir competências em Análise de Processos/TI no desenvolvimento de projetos. A longo prazo, almejo consolidar-me em posições estratégicas como Tech Lead ou Gerente de Projetos, e futuramente atuar como Professor Técnico, combinando excelência técnica, gestão de pessoas e foco na resolução de problemas complexos.</p>
 
                         <a class="btn"
-                            href="https://docs.google.com/document/d/1t8amGjWpeplR-e0Sm4XPdJqtv5shPglZ/edit">Baixar o
+                            href="https://docs.google.com/document/d/1t8amGjWpeplR-e0Sm4XPdJqtv5shPglZ/edit">Ver o
                             meu CV</a>
                     </div>
                 </section>
