--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Prazer em Conhecer</h2>
                     <hr>
                     <div class="resume-section-content">
-                        <p class="mb-0"> Sou João victor Lima Dos Santos Manço, tenho 20 anos e sou Desenvolvedora Web
+                        <p class="mb-0"> Sou João victor Lima Dos Santos Manço, tenho 20 anos e sou Desenvolvedor Web
                             Full Stack em formação pelo programa ProProfissão (Instituto PROA/SENAC), uma capacitação
                             intensiva de 440 horas voltada ao desenvolvimento técnico e interpessoal.
 
